Add device security admin permission
